Passage du JID en doctrine

--- a/src/Arii/ACKBundle/Resources/views/Default/index.html.twig
+++ b/src/Arii/ACKBundle/Resources/views/Default/index.html.twig
@@ -21,5 +21,7 @@ function Init() {
     });
     myJobs.load( "{{ url('xml_ACK_network_pie') }}" );
 }
+
+function PageRefresh() {};
 </script>
 {% endblock %}
