--- a/src/Arii/SelfBundle/Resources/views/Default/index.html.twig
+++ b/src/Arii/SelfBundle/Resources/views/Default/index.html.twig
@@ -4,5 +4,7 @@
 function Init() {
     myLayout = globalLayout.cells("c").attachURL('{{ url('html_Self_help') }}');   
 }
+
+function PageRefresh() {};
 </script>
 {% endblock %}
