--- a/src/Arii/SelfBundle/Resources/views/Request/index.html.twig
+++ b/src/Arii/SelfBundle/Resources/views/Request/index.html.twig
@@ -110,8 +110,6 @@ function Init() {
         }
         return true;
     });
-    
-    autorefresh = setInterval( "GridRefresh()",update*1000);        
 }
 
 function form(id) {
@@ -123,7 +121,7 @@ function form(id) {
     myForm = myLayout.cells("a").attachForm();
     myForm.loadStruct("{{ url('json_Self_form') }}?form="+id, function() {
         globalLayout.cells("c").progressOff();
-        GridRefresh();
+        PageRefresh();
     });
     myForm.attachEvent("onButtonClick", function(id){
         if (id != 'SUBMIT') return true;
@@ -163,7 +161,7 @@ function logRequest(id) {
     myWin.attachURL("{{ url('html_Self_history_status') }}?id="+id);  
 }
 
-function GridRefresh() {    
+function PageRefresh() {    
     globalLayout.cells("a").progressOff();
     myRequests.load( "{{ url('xml_Self_requests_grid') }}?request="+last, function() {
         myRequests.refreshFilters();
